# code-review-openenv-final

./: .gitignore  Dockerfile  LICENSE  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py
tasks/: task_definition.py
utils/: embeddings_util.py
